--- a/main.css
+++ b/main.css
@@ -12,6 +12,9 @@ a {
     transition: 0.3s ease;
 }
 /* Header */
+#header {
+    width: 100%;
+}
 .header-container {
     width: 100%;
     background-color: white;
@@ -53,7 +56,6 @@ a {
     justify-content: center;
     height: 150px;
     width: 100%;
-    padding: 0 20px;
 }
 .title-area {
     text-align: center;
@@ -103,7 +105,6 @@ a {
     color: #00AA4F;
 }
 /* content */
-
 .content-container {
     display: flex;
     justify-content: space-between;
@@ -369,9 +370,16 @@ figure {
 
 /* Responsive */
 @media screen and (max-width: 990px) {
+    #header {
+        position: fixed;
+        top: 0;
+        z-index: 100;
+    }
     .mobile-nav {
-        display: block;
-        
+        display: block;    
+    }
+    #content {
+        margin-top: 200px;
     }
     .title-area {
         width: 70%;
@@ -402,6 +410,9 @@ figure {
     }
 }
 @media screen and (max-width: 540px) {
+    .header-middle {
+        padding: 0 20px 0 10px;
+    }
     .widget-container {
         width: 100%;
     }
